--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "license": "MIT",
   "dependencies": {
     "reverse-regex": "0.0.2",
-    "reverse-component": "0.0.1"
+    "component-reverse": "0.0.2"
   }
 }
